2008-08-09  Francesca Gatti <frency.gatti@gmail.com>

	* Added support for cartesian equation of a locus:
	The new property "cartesian-equation" for a locus_imp
	allows for the construction of the cartesian-equation
	of the locus.  This is done numerically by solving a
	linear system where the unknowns are the coefficient
	of a generic algebraic equation of degree <= 5.
	See files objects/locus_imp.* for details.

2006-11-22  Maurizio Paolini <paolini@dmf.unicatt.it>

	* Added support for conic arcs.  There are two
	constructions available to generate a conic arc:
	1. Three points (start point, end point and
	an intermediate point) and the conic center.
	2. Conic arc through five points.  The first
	and fifth points are respectively the start and
	end-point of the arc; the third point is used to
	select which one of the two arcs with the given
	end-points; the second and fourth are only required
	to belong to the supporting conic.
	Construction 2 is motivated because construction 1
	cannot be used to constract the special case of
	constructing an exact "half-ellipse".

2006-03-31  Maurizio Paolini <paolini@dmf.unicatt.it>

	* Add polygon-polygon intersection.  This is not yet
	completely functional: right now it requires both
	polygons to be non-self-intersecting, and it still
	does not work in special situation such as two polygons
	with more than one or two common vertices.
	In such cases an InvalidImp is returned instead of the
	correct intersection polygon.

2006-02-28  Maurizio Paolini <paolini@dmf.unicatt.it>

	* Various improvements concerning internal scripting usability
	such as: allow working with numeric/boolean labels (as input
	parameters), allow returning a number or a string, allow
	various constructions to depend on numeric labels

2006-02-17  Pino Toscano <toscano.pino@tiscali.it>

	* Adding the support for editing a Python script. It's possible
	to start the diting by right-clicking on an object created by a